--- a/package.json
+++ b/package.json
@@ -6,14 +6,35 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts,tsx --ignore-path .gitignore .",
+    "lint:fix": "npm run lint --fix",
+    "format": "prettier --check .",
+    "format:fix": "prettier --write .",
+    "lint:all": "run-s format lint",
+    "lint:all-fix": "run-s format:fix lint:fix",
+    "prepare": "husky"
   },
   "dependencies": {
+    "npm-run-all": "^4.1.5",
     "preact": "^10.19.6"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --fix",
+    "*": "prettier -w -u"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
-    "typescript": "^5.2.2",
+    "@typescript-eslint/parser": "^7.4.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3",
     "vite": "^5.2.0"
   }
 }
